@@ -15,22 +15,34 @@
  */
 package com.clougence.clouddm.ds.tidb.sql.analysis.behavior;
 
+import java.io.Reader;
+import java.io.StringReader;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.stream.Stream;
+
+import org.antlr.v4.runtime.Parser;
+import org.antlr.v4.runtime.ParserRuleContext;
+import org.antlr.v4.runtime.tree.AbstractParseTreeVisitor;
+import org.antlr.v4.runtime.tree.ParseTree;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
 import com.clougence.clouddm.ds.tidb.sql.parser.TiDBDslProvider;
+import com.clougence.clouddm.ds.tidb.sql.parser.TiSplitAnalysisSpi;
 import com.clougence.clouddm.ds.tidb.sql.parser.TiDBParserConfig;
 import com.clougence.clouddm.sdk.sql.analysis.behavior.BehaviorAnalysisSpi;
 import com.clougence.clouddm.sdk.sql.analysis.behavior.StatementBehavior;
 import com.clougence.dslpaser.antlr.DslHelper;
 import com.clougence.schema.umi.struts.UmiTypes;
 import com.clougence.clouddm.ds.tidb.sql.analysis.reference.TiDBResourceRegistry;
-import com.clougence.utils.StringUtils;
 
 public class TiBehaviorAnalysisSpi implements BehaviorAnalysisSpi {
 
-    private final TiDBDslProvider       provider;
+    private final TiDBDslProvider      provider;
     private final TiDBResourceRegistry resources;
 
     public TiBehaviorAnalysisSpi(TiDBParserConfig config){
@@ -39,13 +51,20 @@ public class TiBehaviorAnalysisSpi implements BehaviorAnalysisSpi {
     }
 
     @Override
-    public List<StatementBehavior> analysisBehavior(String query, Map<UmiTypes, Object> levels, int baseLine, int baseColumn) {
-        if (StringUtils.isBlank(query)) {
-            return Collections.emptyList();
-        }
+    public Stream<StatementBehavior> analysisBehaviorStream(Reader queryReader, Map<UmiTypes, Object> levels, int baseLine, int baseColumn) {
+        var scripts = new TiSplitAnalysisSpi().splitScriptStream(queryReader, List.of(), baseLine, baseColumn);
+        return scripts.flatMap(script -> {
+            StringReader reader = new StringReader(script.getScript());
+            int codeLine = script.getBodyStartCodeLine();
+            int codeColumn = script.getBodyStartCodeColumn();
 
+            return analyzeStatement(reader, levels, codeLine, codeColumn).stream();
+        }).onClose(scripts::close);
+    }
+
+    private List<StatementBehavior> analyzeStatement(Reader queryReader, Map<UmiTypes, Object> levels, int baseLine, int baseColumn) {
         TiBehaviorParserVisitor[] holder = new TiBehaviorParserVisitor[1];
-        DslHelper.doVisitor(provider, query, (lexer, parser) -> {
+        DslHelper.doVisitor(provider, queryReader, (lexer, parser) -> {
             holder[0] = new TiBehaviorParserVisitor(parser, provider, levels, baseLine, baseColumn, resources);
             return holder[0];
         });
