@@ -15,37 +15,49 @@
  */
 package com.clougence.sql.mysql.analysis.behavior;
 
-import java.util.Collections;
+import java.io.Reader;
+import java.io.StringReader;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Stream;
 
 import com.clougence.clouddm.sdk.sql.analysis.behavior.BehaviorAnalysisSpi;
 import com.clougence.clouddm.sdk.sql.analysis.behavior.StatementBehavior;
 import com.clougence.dslpaser.antlr.DslHelper;
 import com.clougence.schema.umi.struts.UmiTypes;
-import com.clougence.sql.mysql.parser.MyDslProvider;
-import com.clougence.sql.mysql.parser.MySqlParserConfig;
 import com.clougence.sql.mysql.analysis.reference.MySqlResourceRegistry;
-import com.clougence.utils.StringUtils;
+import com.clougence.sql.mysql.parser.MyDslProvider;
+import com.clougence.sql.mysql.parser.MySplitAnalysisSpi;
+import com.clougence.sql.mysql.parser.MySqlParserConfig;
 
 public class MyBehaviorAnalysisSpi implements BehaviorAnalysisSpi {
 
     private final MyDslProvider         provider;
     private final MySqlResourceRegistry resources;
+    private final MySplitAnalysisSpi    splitter;
 
     public MyBehaviorAnalysisSpi(MySqlParserConfig config){
         this.provider = new MyDslProvider(config);
         this.resources = MySqlResourceRegistry.instance();
+        this.splitter = new MySplitAnalysisSpi(this.provider);
     }
 
     @Override
-    public List<StatementBehavior> analysisBehavior(String query, Map<UmiTypes, Object> levels, int baseLine, int baseColumn) {
-        if (StringUtils.isBlank(query)) {
-            return Collections.emptyList();
-        }
+    public Stream<StatementBehavior> analysisBehaviorStream(Reader queryReader, Map<UmiTypes, Object> levels, int baseLine, int baseColumn) {
+        var scripts = this.splitter.splitScriptStream(queryReader, List.of(), baseLine, baseColumn);
+        return scripts.flatMap(script -> {
+            StringReader reader = new StringReader(script.getScript());
+            int codeLine = script.getBodyStartCodeLine();
+            int codeColumn = script.getBodyStartCodeColumn();
+
+            return analyzeStatement(reader, levels, codeLine, codeColumn).stream();
+        }).onClose(scripts::close);
+    }
+
+    private List<StatementBehavior> analyzeStatement(Reader queryReader, Map<UmiTypes, Object> levels, int baseLine, int baseColumn) {
 
         MyBehaviorParserVisitor[] holder = new MyBehaviorParserVisitor[1];
-        DslHelper.doVisitor(provider, query, (lexer, parser) -> {
+        DslHelper.doVisitor(provider, queryReader, (lexer, parser) -> {
             holder[0] = new MyBehaviorParserVisitor(parser, provider, levels, baseLine, baseColumn, resources);
             return holder[0];
         });
