@@ -6,24 +6,28 @@
  */
 package com.clougence.sql.postgres.analysis.behavior;
 
-import java.util.Collections;
+import java.io.Reader;
+import java.io.StringReader;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Stream;
 
 import com.clougence.clouddm.sdk.sql.analysis.behavior.BehaviorAnalysisSpi;
 import com.clougence.clouddm.sdk.sql.analysis.behavior.StatementBehavior;
 import com.clougence.dslpaser.antlr.DslHelper;
 import com.clougence.schema.umi.struts.UmiTypes;
 import com.clougence.sql.postgres.parser.PgDslProvider;
+import com.clougence.sql.postgres.parser.PgSplitAnalysisSpi;
 import com.clougence.sql.postgres.parser.PostgresVersion;
-import com.clougence.utils.StringUtils;
 
 public class PgBehaviorAnalysisSpi implements BehaviorAnalysisSpi {
 
-    private final PgDslProvider provider;
+    private final PgDslProvider      provider;
+    private final PgSplitAnalysisSpi splitter;
 
     public PgBehaviorAnalysisSpi(PostgresVersion version){
         this.provider = new PgDslProvider(version);
+        this.splitter = new PgSplitAnalysisSpi(version);
     }
 
     public PostgresVersion version() {
@@ -31,13 +35,21 @@ public class PgBehaviorAnalysisSpi implements BehaviorAnalysisSpi {
     }
 
     @Override
-    public List<StatementBehavior> analysisBehavior(String query, Map<UmiTypes, Object> levels, int baseLine, int baseColumn) {
-        if (StringUtils.isBlank(query)) {
-            return Collections.emptyList();
-        }
+    public Stream<StatementBehavior> analysisBehaviorStream(Reader queryReader, Map<UmiTypes, Object> levels, int baseLine, int baseColumn) {
+        var scripts = this.splitter.splitScriptStream(queryReader, List.of(), baseLine, baseColumn);
+        return scripts.flatMap(script -> {
+            StringReader reader = new StringReader(script.getScript());
+            int codeLine = script.getBodyStartCodeLine();
+            int codeColumn = script.getBodyStartCodeColumn();
+
+            return analyzeStatement(reader, levels, codeLine, codeColumn).stream();
+        }).onClose(scripts::close);
+    }
+
+    private List<StatementBehavior> analyzeStatement(Reader queryReader, Map<UmiTypes, Object> levels, int baseLine, int baseColumn) {
 
         PgBehaviorParserVisitor[] holder = new PgBehaviorParserVisitor[1];
-        DslHelper.doVisitor(provider, query, (lexer, parser) -> {
+        DslHelper.doVisitor(provider, queryReader, (lexer, parser) -> {
             holder[0] = new PgBehaviorParserVisitor(parser, provider.version(), levels, baseLine, baseColumn);
             return holder[0];
         });
